--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/node": "24.1.0",
+    "@types/react": "19.1.8",
     "eslint": "^8",
     "eslint-config-next": "14.1.0"
   }
