--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@heroicons/react": "^2.2.0",
     "@iconify/react": "^4.1.1",
     "bootstrap": "^5.3.2",
     "html-react-parser": "^5.1.1",
