--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@iconify/react": "^4.1.1",
     "bootstrap": "^5.3.2",
+    "formik": "^2.4.6",
     "html-react-parser": "^5.1.1",
     "next": "^14.0.4",
     "react": "^18",
@@ -24,7 +25,8 @@
     "react-slick": "^0.30.1",
     "react-water-wave": "^2.0.1",
     "sass": "^1.70.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@types/node": "24.1.0",
