--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^6.0.0",
     "@heroicons/react": "^2.2.0",
     "@iconify/react": "^4.1.1",
+    "axios": "^1.11.0",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.6",
     "html-react-parser": "^5.1.1",
@@ -26,6 +27,8 @@
     "react-water-wave": "^2.0.1",
     "sass": "^1.70.0",
     "slick-carousel": "^1.8.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.22.2",
     "yup": "^1.7.0"
   },
   "devDependencies": {
