--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,11 @@
       {
         "name": "next"
       }
-    ]
+    ],
+        "paths": {
+      "@/*": ["./src/*"],
+      "@public/*": ["./public/*"]
+    }
   },
   "include": [
     "next-env.d.ts",
