--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^6.0.0",
     "@heroicons/react": "^2.2.0",
     "@iconify/react": "^4.1.1",
+    "@tanstack/react-query": "^5.84.1",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.6",
